--- a/Projeler/Odev1/Odev1/Odev1.vcxproj
+++ b/Projeler/Odev1/Odev1/Odev1.vcxproj
@@ -126,6 +126,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,6 +142,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+        <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -150,17 +152,21 @@
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-main-d.lib;sfml-network-d.lib;sfml-system-d.lib;sfml-audio-d.lib;sfml-window-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Bullet.cpp" />
-    <ClCompile Include="Cannon.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Utils.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Bullet.h" />
-    <ClInclude Include="Cannon.h" />
-    <ClInclude Include="Utils.h" />
-  </ItemGroup>
+    <ItemGroup>
+        <ClCompile Include="Bobble.cpp"/>
+        <ClCompile Include="Cannon.cpp"/>
+        <ClCompile Include="GameManager.cpp"/>
+        <ClCompile Include="Grid.cpp"/>
+        <ClCompile Include="main.cpp"/>
+        <ClCompile Include="Utils.cpp"/>
+    </ItemGroup>
+    <ItemGroup>
+        <ClInclude Include="Bobble.h"/>
+        <ClInclude Include="Cannon.h"/>
+        <ClInclude Include="GameManager.h"/>
+        <ClInclude Include="Grid.h"/>
+        <ClInclude Include="Utils.h"/>
+    </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
